# DailyCodingProblems

./: .gitattributes  .gitignore  DailyCodingProblems.fsproj  build.cmd  build.fsx  fantomas-test.fs  generateHtml.fsx  paket.dependencies  template.html  xfantomas-config.json
Jupyter (1, 1.1, 2, 3)/: Daily Coding Problem 1 revisited.ipynb  Daily Coding Problem 1.ipynb
src/: fantomas-config.json
src/3.1/: Daily Coding Problem 3.1.fsx
src/3.1.todelete/: Daily Coding Problem 3.1.fsx
src/P3/: Daily Coding Problem 3.ipynb
src/P3a/: P3a.fsproj  P3a.fsx  paket.dependencies
src/P4/: P4.fsproj  P4.fsx  P4b.fsx
src/P5/: Daily Coding Problem 5.html  Daily Coding Problem 5.ipynb
src/P6/: Cargo.toml
src/P7/: Cargo.toml  massif.out.p7_memoize  massif.out.p7_tail_recursive  massif.out.p7_tail_recursive_ish
src/aoc2019_1/: Cargo.toml  Makefile.toml  rustfmt.toml
src/aoc2019_1/src/: lib.rs  main.rs
src/aoc2019_1/tests/: tests_aoc2019_1a.rs  tests_aoc2019_1b.rs  tests_aoc2019_1b_property.proptest-regressions  tests_aoc2019_1b_property.rs
src/aoc2019_2/: Cargo.toml  Makefile.toml  index.html
src/aoc2019_2/src/: lib-orig.rs  lib-orig2.rs  lib.rs  main.rs
src/aoc2019_2/tests/: tests_aoc2019_2a.rs
src/aoc2019_3/: .gitignore  AOC2019Day3.ipynb  AOC2019_3.sln  Cargo.toml  Directory.Build.props  LICENSE.md  README.md  UpgradeLog.htm  (+4 more)
src/aoc2019_3.bolero/: aoc2019_3.bolero.sln
src/aoc2019_3.todelete/: aoc2019_3.sln
src/aoc2019_3.uwp_wpf/: aoc2019_3.sln
src/aoc2019_3_rust/: Cargo.toml  rustfmt.toml
src/aoc2019_3_rust/tests/: tests_aoc2019_3a_movement_direction.proptest-regressions  tests_aoc2019_3a_path.rs  tests_aoc2019_3a_path_entry.proptest-regressions  tests_aoc2019_3a_strategy.rs
src/dcp8/: Cargo.toml  Makefile.toml
src/dcp8/benches/: benchmark.rs
src/dcp8/src/: lib.rs
src/dcp8/tests/: tests_p8.proptest-regressions  tests_p8.rs
(+160 files in other folders)
