[package]
name = "aoc2019_1"
version = "0.1.0"
authors = ["zakaluka <zakthrow@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
#proptest = "0.9"
#criterion = "0.3"
#cargo-make = "0.26.1"
#rand = "0.7"
#itertools = "0.8"

#[[bench]]
#name = "benchmark"
#harness = false
