[package]
name = "aoc2019_2"
version = "0.1.0"
authors = ["zakaluka <zakthrow@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
proptest = "^0.9"
wasm-bindgen-test = "^0.2.50" # NOTE: keep in sync with wasm-bindgen version

[dependencies]
seed = "^0.5.1"
wasm-bindgen = "^0.2.50"
gloo-timers = {version = "0.2", features = ["futures"]}

[profile.release]  # Attempts to minimize file size
lto = true
opt-level = 'z'

[lib]
crate-type = ["cdylib", "rlib"]
