[package]
name = "dcp8"
version = "0.1.0"
authors = ["zakaluka <zakthrow@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
proptest = "0.9.4"
criterion = "0.3.0"
cargo-make = "0.24.2"

[[bench]]
name = "benchmark"
harness = false
